--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <header>
             <div class="data-item" data-testid="slackUserName">
-                   <h1>Muees99</h1>
-                   <h4>Personal Profile</h4>
+                <label>slackUserName:</label>
+                <span id="slackUserName"> <h1>Muees99</h1></span>
             </div>
        </header>
     </div>
@@ -38,7 +38,7 @@
 <footer>
     <nav>
         <div class="github-link" data-testid="githubURL">
-            <button>Just a click away to the<a href="https://github.com/Muees99/Frontend-Page-Creation.git">GitHub</a>Repository</button> 
+            <button><a href="https://github.com/Muees99/Frontend-Page-Creation.git">GitHub</a></button> 
         </div>
     </nav>
 </footer>
