--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <div class="container">
         <header>
             <div class="data-item" data-testid="slackUserName">
-                <label>slackUserName:</label>
-                <span id="slackUserName"> <h1>Muees99</h1></span>
+                 <h1>Muees99</h1>
+                 <h4>Personal Profile</h4>
             </div>
        </header>
     </div>
     <div class="image-container">
         <img src="https://ca.slack-edge.com/T05FFAA91JP-U05RE8NGQ3E-94d569040a8f-512" width="400px" height="400px" data-testid="slackDisplayImage" alt="Muees99">
+        <h2 class="centered">I'm a Frontend Intern at Zuri</h2>
         <div>
             <li class="data-item" data-testid="currentDayOfTheWeek">
                 <label>Current Day of the Week:</label>
@@ -37,7 +38,7 @@
 <footer>
     <nav>
         <div class="github-link" data-testid="githubURL">
-            <button><a href="https://github.com/Muees99/Frontend-Page-Creation.git">GitHub</a></button> 
+            <button>Just a click away to the<a href="https://github.com/Muees99/Frontend-Page-Creation.git">GitHub</a>Repository</button> 
         </div>
     </nav>
 </footer>
